# coteach-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __main__.py
src/coteach_ai/agent/: __init__.py  agent.py  filter_agent.py  orchestrator.py  organizer_agent.py  research_agent.py  visual_agent.py
src/coteach_ai/agent/config/: ai_config.py  constants.py
src/coteach_ai/api/: application.py  granian_app.py  hypercorn_app.py  lifespan.py
src/coteach_ai/api/course/: controller.py  dto.py  schema.py  view.py
src/coteach_ai/core/: __init__.py
src/coteach_ai/core/config/: base.py  headers.py  hypercorn_config.py  open_api_config.py  security.py  servers.py
src/coteach_ai/core/constants/: app_enums.py  prompts.py
src/coteach_ai/core/schema/: base.py
src/coteach_ai/core/schema/dto/: common.py
src/coteach_ai/core/schema/response/: data_response_schema.py
src/coteach_ai/core/utils/: logging.py
src/coteach_ai/errors/: __init__.py  data_error.py  initialization_error.py  invalid_search_tool_error.py  lanchain_error.py  unknown_model_error.py
src/coteach_ai/middlewares/: __init__.py  logging_middleware.py
src/coteach_ai/static/docs/: scalar.css
