[project]
name = "coteach-ai"
version = "0.1.0"
description = "A multi-agent AI system that transforms simple course ideas into fully structured educational experiences through automated research and intelligent content organization."
requires-python = ">=3.13"
authors = [
    { name = "Vetrichelvan", email = "pythonhubdev@gmail.com" }
]
dependencies = [
    "granian>=2.1.2",
    "hypercorn>=0.17.3",
    "litestar-granian>=0.12.1",
    "litestar >=2.15.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "langgraph>=0.3.18",
    "langchain-community>=0.3.20",
    "langchain>=0.3.21",
]

[dependency-groups]
openai = [
    "openai>=1.68.2",
    "langchain-openai>=0.3.9",
]
google = [
    "google-api-python-client>=2.165.0",
    "langchain-google-community>=2.0.7",
]
tavily = [
    "tavily-python>=0.5.1",
]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.397",
    "ruff>=0.11.2",
]

[tool.uv]
package = true

[tool.mypy]
files = [
    "src/"
]

[tool.pyright]
exclude = ["tests", ".venv"]
